--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass src/scss/:dist/css/ --no-source-map --watch"
+    "sass": "sass src/scss/style.scss src/css/style.css -w"
   },
   "author": "",
   "license": "ISC",
